Fix layout issues with longer dates

--- a/homedisplay/display/static/stylesheets/custom_door.css
+++ b/homedisplay/display/static/stylesheets/custom_door.css
@@ -77,7 +77,7 @@ body {
   }
 
   .calendar {
-    font-size: 450%;
+    font-size: 350%;
     padding-bottom: .25em;
     padding-top: .25em;
   }
